...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/login_fragment">

        <Button
            android:id="@+id/btn_digit_9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_bottom_login_button"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
...
            app:layout_constraintLeft_toRightOf="@+id/gl_v_64"
            app:layout_constraintEnd_toStartOf="@+id/gl_v_92"
            app:layout_constraintRight_toLeftOf="@+id/gl_v_92"
            app:layout_constraintTop_toTopOf="@+id/gl_40" />

        <Button
            android:id="@+id/btn_digit_8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_bottom_login_button"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
...
            app:layout_constraintLeft_toRightOf="@+id/gl_v_36"
            app:layout_constraintEnd_toStartOf="@+id/gl_v_64"
            app:layout_constraintRight_toLeftOf="@+id/gl_v_64"
            app:layout_constraintTop_toTopOf="@+id/gl_40" />

        <Button
            android:id="@+id/btn_digit_7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_bottom_login_button"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
...
            app:layout_constraintLeft_toRightOf="@+id/gl_v_8"
            app:layout_constraintEnd_toStartOf="@+id/gl_v_36"
            app:layout_constraintRight_toLeftOf="@+id/gl_v_36"
            app:layout_constraintTop_toTopOf="@+id/gl_40" />

        <Button
            android:id="@+id/btn_digit_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_bottom_login_button"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
...
            app:layout_constraintLeft_toRightOf="@+id/gl_v_64"
            app:layout_constraintEnd_toStartOf="@+id/gl_v_92"
            app:layout_constraintRight_toLeftOf="@+id/gl_v_92"
            app:layout_constraintTop_toTopOf="@+id/gl_53" />

        <Button
            android:id="@+id/btn_digit_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_bottom_login_button"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
...
            app:layout_constraintLeft_toRightOf="@+id/gl_v_36"
            app:layout_constraintEnd_toStartOf="@+id/gl_v_64"
            app:layout_constraintRight_toLeftOf="@+id/gl_v_64"
            app:layout_constraintTop_toTopOf="@+id/gl_53" />

        <Button
            android:id="@+id/btn_digit_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_bottom_login_button"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
...
            app:layout_constraintLeft_toRightOf="@+id/gl_v_8"
            app:layout_constraintEnd_toStartOf="@+id/gl_v_36"
            app:layout_constraintRight_toLeftOf="@+id/gl_v_36"
            app:layout_constraintTop_toTopOf="@+id/gl_53" />

        <Button
            android:id="@+id/btn_digit_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_bottom_login_button"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
...
            app:layout_constraintLeft_toRightOf="@+id/gl_v_64"
            app:layout_constraintEnd_toStartOf="@+id/gl_v_92"
            app:layout_constraintRight_toLeftOf="@+id/gl_v_92"
            app:layout_constraintTop_toTopOf="@+id/gl_66" />

        <Button
            android:id="@+id/btn_digit_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_bottom_login_button"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
...
            app:layout_constraintLeft_toRightOf="@+id/gl_v_36"
            app:layout_constraintEnd_toStartOf="@+id/gl_v_64"
            app:layout_constraintRight_toLeftOf="@+id/gl_v_64"
            app:layout_constraintTop_toTopOf="@+id/gl_66" />

        <Button
            android:id="@+id/btn_digit_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_bottom_login_button"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
...
            app:layout_constraintLeft_toRightOf="@+id/gl_v_8"
            app:layout_constraintEnd_toStartOf="@+id/gl_v_36"
            app:layout_constraintRight_toLeftOf="@+id/gl_v_36"
            app:layout_constraintTop_toTopOf="@+id/gl_66" />

        <Button
            android:id="@+id/btn_digit_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_bottom_login_button"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92" />

        <EditText
            android:id="@+id/et_pass_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:maxLength="@integer/pass_number_max_length"
            android:inputType="numberPassword"
            android:textSize="@dimen/text_size_login_edit_text"
...
            android:hint="@string/hint_pass_number_edit"
            app:layout_constraintBottom_toTopOf="@+id/gl_40"
            app:layout_constraintEnd_toEndOf="@+id/btn_digit_9"
            app:layout_constraintStart_toStartOf="@+id/btn_digit_7" />

        <ImageView
            android:id="@+id/btn_clear"
            android:layout_width="@dimen/size_login_btn_clear"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/bg_btn_clear"
            android:clickable="true"
...
