<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="ux" type="dz.deepwork.gamemn02.presenceregister.login.LoginUx"/>
    </data>

    <FrameLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginFragment">

        <include android:id="@+id/content"
            layout="@layout/content_login"
            bind:ux="@{ux}"/>

    </FrameLayout>
</layout>